--- a/story-dawntrail.html
+++ b/story-dawntrail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>暁月の終焉 - FF14</title>
+    <title>黄金のレガシー - FF14</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-ew">
@@ -28,79 +28,91 @@
         <a href="raid.html">レイド</a>
     </nav>
     <h1 class="theme-dt">黄金のレガシー</h1>
-    <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと黄金を巡り、ザラと黄金の守護者に挑み、新大陸の未来を求める。</p>
+    <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと黄金を巡り、ウクラマトと共にアルカディアの試練とソリューション・ナインの謎を解き、ゾラージャとエターナルクイーンに挑み、新大陸の未来を求める。</p>
     <div class="story-content">
-        <h2>前日譚: 黄金の風と新大陸への旅立ち</h2>
-        <p>メーティオンを倒し、終末を止めた後、NebelfeeとSchattenfeeはグリダニアで休息の日々を過ごしていた。姉は20歳、弟は17歳になり、霧と影の力は頂点を極めていた。暁の血盟の拠点では、仲間たちが新たな冒険について語り合っていた。ミンフィリアが静かに告げた。「新大陸トライヨラで黄金の遺産が眠っている。探しの手が必要だ」と。</p>
-        <p>グリダニアの森に暖かな風が吹き、新大陸の黄金を思わせた。Nebelfeeは母ミスティアの双剣を手に、霧を操って訓練を重ねていた。彼女の動きは流れるようで、霧が剣先に渦を巻いた。Schattenfeeは父カゲロウの手裏剣を握り、木々の影に隠れて技を磨いた。彼の投擲は神業に近く、忍者の技術が極まっていた。姉弟は互いの成長を認め合い、絆を深めていた。</p>
-        <p>ある夜、ミンフィリアは姉弟を拠点の広間に呼んだ。彼女の白いローブが灯りに映え、穏やかな声で語った。「トライヨラで黄金の遺産を巡る争いが起きている。ザラという存在が全てを支配しようとしている」と。Nebelfeeは双剣を手に持つ決意を新たにし、「母の霧で未来を」と呟いた。Schattenfeeは影に隠れ、「父の影で戦う」と答えた。ミンフィリアは二人に微笑み、彼らの覚悟を信じた。</p>
-        <p>アルフィノが現れ、新大陸への旅の準備を始めた。彼の青いローブが風に揺れ、若き指導者としての鋭い瞳が姉弟を見つめた。「トライヨラへの船旅は長い。でも、君たちの力が必要だ」と。Nebelfeeは霧を操り、海風に備えた。Schattenfeeは手裏剣を腰に帯び、影での移動を練習した。暁の仲間たちが飛空艇を準備し、旅立ちの時が近づいた。</p>
-        <p>タタルが小さな鞄を手に、姉弟に近づいた。「これを持って行ってね。新大陸は未知だから気をつけて」と笑顔で渡した。ウリエンジェはエーテルの流れを調べ、「トライヨラの敵は強大だ。でも、君たちなら」と励ました。Nebelfeeは霧を盾に変え、Schattenfeeは影に溶け込んだ。姉弟は仲間たちの温かさに感謝し、心を強くした。</p>
-        <p>ある朝、ミンフィリアは姉弟に旅立ちを命じた。「トライヨラでクルレが待っている。黄金の遺産を守って」と。Nebelfeeは双剣を背に負い、霧を操って準備を整えた。Schattenfeeは手裏剣を手に、影に隠れて姉のそばに立った。姉弟は互いの手を握り、グリダニアの港を越えて新大陸へ向かう決意を固めた。黄金の風が彼らを呼び、新たな旅が始まった。</p>
-        <p>霧と影が彼らの背を守り、暁の拠点は旅立ちの準備で活気づいた。ミンフィリアは遠くから見守り、心の中で祈った。「この子たちがトライヨラに未来をもたらすように」と。姉弟の足音が港に響き、運命の道が開かれた。霧隠れの谷の記憶が彼らを支え、黄金のレガシーへの第一歩が刻まれた。</p>
+        <h2>前日譚: 暁の終わりと黄金への旅立ち</h2>
+        <p>メーティオンを倒し、終末を止めた後、NebelfeeとSchattenfeeはグリダニアで休息の日々を過ごしていた。20歳の姉Nebelfeeは母ミスティアから受け継いだ双剣を手に、霧を操る術を極めていた。17歳の弟Schattenfeeは父カゲロウの手裏剣を携え、影に潜む技術を完成させていた。だが、暁の血盟の拠点には終焉の空気が漂っていた。</p>
+        <p>ある夜、グラハ・ティアが姉弟のもとに現れた。赤いローブを纏い、静かに告げた。「終末が去り、暁の役目は終わりだ。解散の時が来た」。Nebelfeeは霧を指先に集め、「母の意志を継ぐなら新天地へ」と呟いた。Schattenfeeは影に身を沈め、「父の遺志で未来を切り開く」と応じた。仲間たちは別れを惜しみつつ、それぞれの道へ散った。</p>
+        <p>解散の翌日、リーン・ウォータースが姉弟を訪ねた。剣を手に穏やかな瞳で語った。「新大陸トライヨラで黄金の遺産が眠っている。アルカディアとソリューション・ナインの謎も待っている。私と一緒に行こう」。Nebelfeeは双剣を握り、霧が刃に絡みついた。Schattenfeeは手裏剣を手に、影が彼を包んだ。新たな旅への決意が二人を動かした。</p>
+        <p>アルフィノが船の手配を進め、タタルが小さな荷物を渡した。「暁は終わりでも、君たちの旅は続くよ」と笑顔で励ました。グラハは魔法を手に、「トライヨラで黄金と闘技場アルカディアの試練が待っている。私も同行する」と宣言した。Nebelfeeは霧を盾に変え、海風に備えた。Schattenfeeは影を操り、一瞬で姿を消した。</p>
+        <p>グリダニアの港に暖かな風が吹き、新大陸の黄金が彼らを呼んだ。NebelfeeとSchattenfeeは互いの目を見据え、暁の終わりを受け入れた。霧と影が彼らを包み、船が港を離れた。仲間たちの声援が遠ざかり、トライヨラへの旅が始まった。黄金のレガシーへの第一歩が刻まれ、運命が動き出した。</p>
 
         <h2>第一章: トライヨラの港</h2>
-        <p>トライヨラの港に船が着いた時、Nebelfeeは霧を纏い、新大陸へ足を踏み入れた。彼女の双剣が黄金の光に映え、20歳の女性は異国の風に目を凝らした。Schattenfeeが影から現れ、姉のそばに立った。彼の手裏剣が港の喧騒に紛れず、17歳の瞳には決意が宿っていた。港の灯りが揺れ、運命が動き出した。</p>
-        <p>クルレが二人を迎え入れた。彼女の紫のローブが風に揺れ、穏やかな声で語った。「トライヨラが争いに揺れている。君たちの力が必要だ」と。Nebelfeeは霧を操り、港の空気を清めた。Schattenfeeは影に隠れ、周囲を警戒した。姉弟は初めての新大陸に戸惑いながらも、心を一つにした。</p>
-        <p>トライヨラの港を進む道すがら、Nebelfeeは霧を盾に変え、周囲を警戒した。彼女の双剣が風を切り、霧が港を舞った。Schattenfeeは影を渡り、姉の背後を守った。彼の手裏剣が微かに光り、忍者の技が冴えていた。港の喧騒が彼らを包み、不穏な気配が漂っていた。クルレは静かに言った。「黄金の峰へ急ごう」と。</p>
-        <p>港の奥で、ザラの使徒が現れた。黄金の甲冑が光り、鋭い咆哮が響いた。Nebelfeeは霧を濃くし、使徒の視界を奪った。彼女の双剣が甲冑を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて使徒を翻弄した。クルレの魔法が援護し、使徒が退いた。トライヨラに静寂が戻った。</p>
-        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。クルレは疲れ果てながらも、「よくやったね」と労った。彼女は港を見つめ、「これが始まりだ」と告げた。姉弟は互いの手を握り、初めての新大陸での勝利に小さな誇りを感じた。</p>
-        <p>トライヨラの港に風が吹き、灯りが静まった。Nebelfeeは霧を操り、港の空気を清めた。Schattenfeeは影に隠れ、静かに休息した。クルレは先導し、姉弟は彼女の背を追った。黄金の足跡が港に残り、彼らの心に響いた。黄金の旅が始まり、霧が風に溶けていった。</p>
-        <p>夜が訪れ、トライヨラの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。港の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、次の戦いが待っていた。</p>
-        <p>トライヨラの港が姉弟の力を試した。霧と影が使徒を退け、黄金の峰への道を開いた。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+        <p>トライヨラの港に船が着いた時、Nebelfeeは霧を纏い、新大陸の土を踏んだ。双剣が朝陽に映え、20歳の女性は異国の喧騒に目を凝らした。Schattenfeeは影から現れ、姉のそばに立った。手裏剣が港の風に揺れず、17歳の瞳に決意が宿った。港のざわめきが二人を包んだ。</p>
+        <p>グラハ・ティアが二人を出迎え、魔法の光で道を照らした。「トライヨラが争いに揺れている。ゾラージャの影とアルカディアの試練が近い」と告げた。Nebelfeeは霧を広げ、周囲の異変を探った。Schattenfeeは影に潜み、手裏剣を構えた。姉弟は新大陸の空気に慣れつつ、心を一つにした。</p>
+        <p>港の奥で、ゾラージャの使徒が現れた。黄金の甲冑が陽光に輝き、低い咆哮が響いた。Nebelfeeは霧を渦に変え、使徒の視界を奪った。双剣が甲冑を切り裂き、霧がその隙を埋めた。Schattenfeeは影を飛び越え、手裏剣で敵を翻弄した。グラハの魔法が援護し、使徒が崩れ落ちた。</p>
+        <p>戦いの後、Nebelfeeは霧を収め、息を整えた。Schattenfeeは影から現れ、姉に微笑んだ。グラハが疲れた声で、「ゾラージャの影がここにも。エターナルクイーンが遠くない」と呟いた。姉弟は港の静寂に立ち、初めての勝利に小さな誇りを感じた。トライヨラの風が次の戦いを示した。</p>
+        <p>夜が訪れ、トライヨラの星空が港を照らした。Nebelfeeは双剣を手に母の教えを思い、Schattenfeeは手裏剣を握り父の遺志を感じた。グラハは魔法を手に未来を見据え、「金光の峰へ向かおう」と語った。霧と影が共存し、姉弟の絆が深まった。</p>
 
-        <h2>第二章: ウルクレイの風</h2>
-        <p>ウルクレイの砂漠に着いた時、蛮神ヴァリガルマンダが咆哮を上げていた。風が荒ぶり、砂が舞った。Nebelfeeは双剣を手に、霧を操って風を鎮めようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はウルクレイの過酷な戦いに覚悟を固めた。</p>
-        <p>エスティニアンが槍を手に現れた。彼の黒い甲冑が光に映え、鋭い声で語った。「ヴァリガルマンダを止めねば」と。Nebelfeeは霧を濃くし、ヴァリガルマンダの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて弱点を狙った。エスティニアンの槍が援護し、砂漠が揺れた。</p>
-        <p>ヴァリガルマンダが反撃し、風の刃がウルクレイを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が鱗を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。エスティニアンの槍が援護し、ヴァリガルマンダが倒れた。砂に静けさが戻った。</p>
-        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。エスティニアンは疲れ果てながらも、「よくやったね」と労った。彼は砂漠を見つめ、「黄金に近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
-        <p>ウルクレイに静寂が広がり、風が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。エスティニアンは暁に報告するため去り、姉弟はウルクレイを見渡した。ヴァリガルマンダの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
-        <p>夜が訪れ、ウルクレイの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。砂漠の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、次の戦いが待っていた。</p>
-        <p>ウルクレイの風は鎮まり、姉弟の力がトライヨラに希望をもたらした。霧と影がヴァリガルマンダを倒し、砂漠に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+        <h2>第二章: 砂漠の盟友</h2>
+        <p>トライヨラの砂漠地帯に到着した時、砂嵐が吹き荒れた。Nebelfeeは双剣を手に霧を放ち、風を鎮めた。Schattenfeeは影に潜み、手裏剣を構えて砂塵に耐えた。そこへウクラマトが現れ、巨大な体躯と鋭い爪を携えつつ、「私は味方だ。ゾラージャを倒したい」と告げた。</p>
+        <p>リーン・ウォータースが剣を手に加勢し、「ガラザードが砂漠を支配している」と警告した。Nebelfeeは霧を濃くし、蛮神ガラザードの視界を遮った。双剣が鱗を切り裂き、霧が傷を隠した。Schattenfeeは影を縫い、手裏剣で弱点を突いた。ウクラマトが咆哮を上げ、リーンと共にガラザードを圧倒した。</p>
+        <p>ガラザードが砂の刃を放ち、砂漠が揺れた。Nebelfeeは霧を盾に変え、Schattenfeeを守った。双剣が鱗を砕き、霧がその動きを封じた。Schattenfeeは影から飛び出し、手裏剣を連続で投げた。ウクラマトの爪が決着をつけ、砂嵐が静まった。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣の重さを感じた。Schattenfeeは姉に寄り添い、影で微笑んだ。ウクラマトが「ゾラージャの野望を阻止する」と誓い、リーンが頷いた。「黄金に近づいた」。姉弟は砂漠の静寂に立ち、新たな盟友と共に絆を深めた。</p>
+        <p>砂漠の夜空が輝き、風が止んだ。Nebelfeeは霧で空気を清め、Schattenfeeは影で休息した。ウクラマトとリーンが次なる計画を練り、姉弟は新たな戦いに備えた。霧と影が交わり、トライヨラの希望が育った。</p>
 
-        <h2>第三章: シャーローの黄金</h2>
-        <p>シャーローの街に着いた時、蛮神ゴルドラゴンが現れていた。黄金が輝き、街が揺れた。Nebelfeeは双剣を手に、霧を操って光を抑えようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はシャーローの過酷な戦いに覚悟を固めた。</p>
-        <p>リーン・ウォータースが剣を手に現れた。彼女の鋭い声が響き、「ゴルドラゴンを止めねば」と。Nebelfeeは霧を濃くし、ゴルドラゴンの視界を奪った。彼女の双剣が鱗を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。リーン・ウォータースの剣が援護し、街が揺れた。</p>
-        <p>ゴルドラゴンが反撃し、黄金の波がシャーローを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が鱗を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。リーン・ウォータースの剣が援護し、ゴルドラゴンが倒れた。街に静けさが戻った。</p>
-        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。リーン・ウォータースは疲れ果てながらも、「よくやったね」と労った。彼女は街を見つめ、「遺産に近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
-        <p>シャーローに静寂が広がり、黄金が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。リーン・ウォータースは暁に報告するため去り、姉弟はシャーローを見渡した。ゴルドラゴンの光が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
-        <p>夜が訪れ、シャーローの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。街の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、次の戦いが待っていた。</p>
-        <p>シャーローの黄金は鎮まり、姉弟の力がトライヨラに希望をもたらした。霧と影がゴルドラゴンを倒し、街に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+        <h2>第三章: シャーロー二荒野の輝き</h2>
+        <p>シャーロー二荒野に到着した時、黄金の光が姉弟を包んだ。Nebelfeeは双剣を手に霧を広げ、光を和らげた。Schattenfeeは影に潜み、手裏剣を構えて荒野を見渡した。グラハが魔法を手に、「ゾラージャの手下が荒野を支配している」と告げた。</p>
+        <p>ウクラマトが咆哮を上げ、「私が援護する」と宣言した。Nebelfeeは霧を渦に変え、敵の視界を奪った。双剣が黄金の装甲を切り裂き、霧がその傷を覆った。Schattenfeeは影を飛び越え、手裏剣で動きを封じた。ウクラマトとグラハの連携が敵を圧倒した。</p>
+        <p>ゾラージャの使徒が黄金の炎を放ち、荒野が熱に包まれた。Nebelfeeは霧を盾に変え、Schattenfeeを守った。双剣が炎を砕き、霧がその勢いを抑えた。Schattenfeeは影から飛び出し、手裏剣を連続で投げた。ウクラマトの爪が決着をつけ、静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは影から現れ、姉に微笑んだ。ウクラマトが「エターナルクイーンの影が近い」と呟き、グラハが頷いた。「荒野を越えた」。姉弟は荒野の静寂に立ち、勝利の喜びを感じた。</p>
+        <p>シャーロー二荒野の夜が訪れ、星空が荒野を照らした。Nebelfeeは霧で空気を清め、Schattenfeeは影で休息した。ウクラマトとグラハが次なる策を練り、姉弟は新たな戦いに備えた。霧と影が共存し、彼らの絆が深まった。</p>
 
-        <h2>第四章: ヨクトランの守護者</h2>
-        <p>ヨクトランに着いた時、黄金の守護者アークが現れていた。巨体が揺れ、平原が震えた。Nebelfeeは双剣を手に、霧を操って動きを封じようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟はヨクトランの過酷な戦いに覚悟を固めた。</p>
-        <p>アルフィノが魔法を手に現れた。彼の青いローブが光に映え、鋭い声で語った。「アークを止めねば」と。Nebelfeeは霧を濃くし、アークの視界を奪った。彼女の双剣が巨体を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて弱点を狙った。アルフィノの魔法が援護し、平原が揺れた。</p>
-        <p>アークが反撃し、力の波がヨクトランを襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が巨体を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。アルフィノの魔法が援護し、アークが倒れた。平原に静けさが戻った。</p>
-        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。アルフィノは疲れ果てながらも、「よくやったね」と労った。彼は平原を見つめ、「ザラに近づいた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
-        <p>ヨクトランに静寂が広がり、風が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。アルフィノは暁に報告するため去り、姉弟はヨクトランを見渡した。アークの咆哮が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
-        <p>夜が訪れ、ヨクトランの星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。平原の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、次の戦いが待っていた。</p>
-        <p>ヨクトランの守護者は鎮まり、姉弟の力がトライヨラに希望をもたらした。霧と影がアークを倒し、平原に平穏が戻った。星空の下で、彼らは次の挑戦への覚悟を固めた。</p>
+        <h2>第四章: オルコパチャの守護者</h2>
+        <p>オルコパチャに到着した時、黄金の守護者ガラザードが姿を現した。巨体が平原を揺らし、Nebelfeeは双剣を手に霧を放った。Schattenfeeは影に潜み、手裏剣を構えて静寂を探った。ウクラマトが「私が共に戦う」と宣言し、グラハが魔法を手に「ガラザードがゾラージャの鍵だ」と警告した。</p>
+        <p>アルフィノが魔法を手に加勢し、「ガラザードを倒さねば」と叫んだ。Nebelfeeは霧を盾に変え、巨体の動きを鈍らせた。双剣が装甲を切り裂き、霧がその隙を埋めた。Schattenfeeは影を渡り、手裏剣で弱点を突いた。ウクラマトとアルフィノの連携がガラザードを圧倒した。</p>
+        <p>ガラザードが力の波を放ち、オルコパチャが震えた。Nebelfeeは霧を壁に変え、Schattenfeeを守った。双剣が装甲を砕き、霧がその力を弱めた。Schattenfeeは影から飛び出し、手裏剣を連続で投げた。ウクラマトの爪が決着をつけ、平原が静まった。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣の重さを感じた。Schattenfeeは姉に寄り添い、影で微笑んだ。ウクラマトが「ゾラージャを止めよう」と誓い、アルフィノが頷いた。「エターナルクイーンが近い」。姉弟はオルコパチャの静寂に立ち、互いの手を握った。</p>
+        <p>オルコパチャの夜空が輝き、風が止んだ。Nebelfeeは霧で空気を清め、Schattenfeeは影で休息した。ウクラマトとアルフィノが次なる計画を練り、姉弟は新たな戦いに備えた。霧と影が交わり、トライヨラの希望が育った。</p>
 
-        <h2>第五章: 金光の峰の王</h2>
-        <p>金光の峰に着いた時、蛮神ザラが現れていた。黄金が輝き、山が揺れた。Nebelfeeは双剣を手に、霧を操って光を抑えようとした。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は金光の峰の過酷な戦いに覚悟を固めた。</p>
-        <p>クルレとエスティニアンが援護に現れた。クルレの魔法が光を放ち、エスティニアンの槍が響いた。Nebelfeeは霧を濃くし、ザラの視界を奪った。彼女の双剣が黄金を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を投げて動きを封じた。援護が響き、山が揺れた。</p>
-        <p>ザラが反撃し、黄金の波が金光の峰を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が黄金を砕き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。クルレとエスティニアンの援護が響き、ザラが倒れた。山に静けさが戻った。</p>
-        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。クルレは疲れ果てながらも、「よくやったね」と労った。エスティニアンは槍を収め、「遺産が守られた」と告げた。姉弟は互いの手を握り、勝利の喜びを感じた。</p>
-        <p>金光の峰に静寂が広がり、黄金が静まった。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。クルレとエスティニアンは暁に報告するため去り、姉弟は金光の峰を見渡した。ザラの光が消え、彼らの力が試された。霧と影が交わり、新たな戦いへの力が育った。</p>
-        <p>夜が訪れ、金光の峰の星空が輝いた。Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。山の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。トライヨラの危機が彼らを呼び、最後の戦いが待っていた。</p>
-        <p>金光の峰の王は鎮まり、姉弟の力がトライヨラに希望をもたらした。霧と影がザラを倒し、山に平穏が戻った。星空の下で、彼らは最後の挑戦への覚悟を固めた。</p>
+        <h2>第五章: ソリューション・ナインの摩天楼</h2>
+        <p>ソリューション・ナインに到着した時、星なき摩天楼が姉弟を包んだ。Nebelfeeは双剣を手に霧を広げ、異空間の気配を探った。Schattenfeeは影に潜み、手裏剣を構えて静寂に耳を澄ませた。グラハが魔法を手に、「ゾラージャの拠点だ。アルカディアの技術が隠されている」と告げた。</p>
+        <p>ウクラマトが咆哮を上げ、「私が道を開く」と宣言した。Nebelfeeは霧を渦に変え、ゾラージャの使徒の視界を奪った。双剣が黄金の装甲を切り裂き、霧がその傷を隠した。Schattenfeeは影を飛び越え、手裏剣で敵を翻弄した。ウクラマトとグラハの連携が使徒を圧倒した。</p>
+        <p>使徒が光の波を放ち、摩天楼が揺れた。Nebelfeeは霧を盾に変え、Schattenfeeを守った。双剣が波を砕き、霧がその勢いを抑えた。Schattenfeeは影から飛び出し、手裏剣を連続で投げた。ウクラマトの爪が決着をつけ、静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは影から現れ、姉に微笑んだ。ウクラマトが「エターナルクイーンの力を感じる」と呟き、グラハが頷いた。「ゾラージャの本体が近い」。姉弟は摩天楼の静寂に立ち、勝利の喜びを感じた。</p>
+        <p>ソリューション・ナインの夜が訪れ、星なき空が輝いた。Nebelfeeは霧で空気を清め、Schattenfeeは影で休息した。ウクラマトとグラハが次なる策を練り、姉弟は新たな戦いに備えた。霧と影が交わり、トライヨラの希望が育った。</p>
 
-        <h2>第六章: 黄金の夜明け</h2>
-        <p>金光の峰に戻った時、ザラが再び現れていた。黄金が輝き、山が揺れた。Nebelfeeの双剣が光を裂き、霧を操って立ち向かった。Schattenfeeは影に隠れ、手裏剣を握り締めた。姉弟は最終決戦に覚悟を固めた。暁の仲間が祈りを響かせ、トライヨラが息を吹き返した。</p>
-        <p>ミンフィリアの祈りが響き、暁の力が金光の峰に響いた。Nebelfeeは霧を嵐に変え、ザラの動きを封じた。彼女の双剣が黄金を切り裂き、霧が傷を覆った。Schattenfeeは影から飛び出し、手裏剣を心臓に投げた。ザラが膝をつき、暁の希望が山に輝いた。</p>
-        <p>ザラが最後の反撃を放ち、黄金の波が金光の峰を襲った。Nebelfeeは霧を盾に変え、Schattenfeeを守った。彼女の双剣が心臓を貫き、霧がその動きを隠した。Schattenfeeは影を渡り、手裏剣を連続で投げた。ミンフィリアの祈りが援護し、ザラが消えた。金光の峰に夜明けが訪れた。</p>
-        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉のそばに寄り、影の中で微笑んだ。ミンフィリアは疲れ果てながらも、「よくやったね」と労った。暁の仲間が集い、「ありがとう」と告げた。姉弟は互いの手を握り、黄金の夜明けが訪れたことを感じた。</p>
-        <p>金光の峰の空に朝日が昇った。Nebelfeeは霧を操り、空気を清めた。Schattenfeeは影に隠れ、静かに休息した。ミンフィリアは暁に報告を準備し、姉弟は未来を見据えた。霧と影が交わり、新たな旅への力が育った。トライヨラの危機が終わり、平穏が戻った。</p>
-        <p>朝日の下、Nebelfeeは双剣を手に、母の教えを思い出した。Schattenfeeは手裏剣を握り、父の遺志を感じた。金光の峰の静けさが彼らを包み、疲れた体を癒した。霧と影が共存し、姉弟の絆が深まった。黄金の未来が彼らを呼び、新たな旅が始まった。</p>
-        <p>黄金の夜明けがトライヨラに希望をもたらした。霧と影がザラを倒し、新たな時代が幕を開けた。朝日の下で、彼らは次の冒険への誓いを立てた。</p>
+        <h2>第六章: アルカディアの試練</h2>
+        <p>アルカディアに到着した時、至天の座が姉弟を試した。Nebelfeeは双剣を手に霧を放ち、闘技場の気配を探った。Schattenfeeは影に潜み、手裏剣を構えて静寂に備えた。グラハが魔法を手に、「ゾラージャがアルカディアの力を利用している」と警告した。</p>
+        <p>ウクラマトが咆哮を上げ、「私が援護する」と宣言した。Nebelfeeは霧を盾に変え、ゾラージャの使徒の動きを鈍らせた。双剣が装甲を切り裂き、霧がその隙を埋めた。Schattenfeeは影を渡り、手裏剣で弱点を突いた。ウクラマトとグラハの連携が使徒を圧倒した。</p>
+        <p>使徒が黄金の刃を放ち、闘技場が揺れた。Nebelfeeは霧を壁に変え、Schattenfeeを守った。双剣が刃を砕き、霧がその勢いを弱めた。Schattenfeeは影から飛び出し、手裏剣を連続で投げた。ウクラマトの爪が決着をつけ、静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣の重さを感じた。Schattenfeeは姉に寄り添い、影で微笑んだ。ウクラマトが「アルカディアをゾラージャから解放した」と誓い、グラハが頷いた。「エターナルクイーンが近い」。姉弟は闘技場の静寂に立ち、互いの手を握った。</p>
+        <p>アルカディアの夜が訪れ、空が静かに輝いた。Nebelfeeは霧で空気を清め、Schattenfeeは影で休息した。ウクラマトとグラハが次なる策を練り、姉弟は新たな戦いに備えた。霧と影が交わり、トライヨラの希望が育った。</p>
+
+        <h2>第七章: 金光の峰への道</h2>
+        <p>金光の峰への道すがら、ゾラージャの使徒が姉弟を襲った。黄金の光が山道を照らし、Nebelfeeは双剣を手に霧を広げた。Schattenfeeは影に潜み、手裏剣を構えて警戒した。リーン・ウォータースが剣を手に、「ゾラージャの力を止めねば」と警告した。</p>
+        <p>ウクラマトが咆哮を上げ、「私が道を開く」と宣言した。Nebelfeeは霧を渦に変え、使徒の視界を奪った。双剣が甲冑を切り裂き、霧がその傷を隠した。Schattenfeeは影を飛び越え、手裏剣で敵を翻弄した。ウクラマトとリーンの連携が使徒を圧倒した。</p>
+        <p>使徒が黄金の波を放ち、山道が揺れた。Nebelfeeは霧を盾に変え、Schattenfeeを守った。双剣が波を砕き、霧がその勢いを抑えた。Schattenfeeは影から飛び出し、手裏剣を連続で投げた。ウクラマトの爪が決着をつけ、道が静まった。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは影から現れ、姉に微笑んだ。ウクラマトが「エターナルクイーンが近い」と呟き、リーンが頷いた。「道が開けた」。姉弟は山道の静寂に立ち、勝利の喜びを感じた。</p>
+        <p>金光の峰への夜が訪れ、星空が道を照らした。Nebelfeeは霧で空気を清め、Schattenfeeは影で休息した。ウクラマトとリーンが次なる策を練り、姉弟は新たな戦いに備えた。霧と影が交わり、彼らの絆が深まった。</p>
+
+        <h2>第八章: 金光の峰の試練</h2>
+        <p>金光の峰に到着した時、ゾラージャが姿を現した。黄金が輝き、山が揺れた。Nebelfeeは双剣を手に霧を放ち、光を抑えた。Schattenfeeは影に潜み、手裏剣を構えて警戒した。グラハが魔法を手に、「ゾラージャを倒せばエターナルクイーンに届く」と警告した。</p>
+        <p>ウクラマトとリーンが援護に現れ、爪と剣が響き合った。Nebelfeeは霧を盾に変え、ゾラージャの動きを封じた。双剣が黄金を切り裂き、霧がその傷を覆った。Schattenfeeは影を渡り、手裏剣で敵を翻弄した。ウクラマトとグラハの連携がゾラージャを圧倒した。</p>
+        <p>ゾラージャが黄金の刃を放ち、金光の峰が震えた。Nebelfeeは霧を壁に変え、Schattenfeeを守った。双剣が刃を砕き、霧がその勢いを弱めた。Schattenfeeは影から飛び出し、手裏剣を連続で投げた。ウクラマトの爪が決着をつけ、山が静まった。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣の重さを感じた。Schattenfeeは姉に寄り添い、影で微笑んだ。ウクラマトが「エターナルクイーンが待つ」と呟き、グラハが頷いた。「試練は終わりではない」。姉弟は金光の峰の静寂に立ち、互いの手を握った。</p>
+        <p>金光の峰の夜空が輝き、黄金が静まった。Nebelfeeは霧で空気を清め、Schattenfeeは影で休息した。ウクラマトとリーンが次なる策を練り、姉弟は最終戦に備えた。霧と影が交わり、トライヨラの希望が育った。</p>
+
+        <h2>第九章: ソリューション・ナインの深層</h2>
+        <p>ソリューション・ナインに再び戻った時、ゾラージャの使徒が摩天楼を襲った。星なき空が揺れ、Nebelfeeは双剣を手に霧を広げた。Schattenfeeは影に潜み、手裏剣を構えて警戒した。グラハが魔法を手に、「エターナルクイーンの力の一部だ。アルカディアの技術がここに」と警告した。</p>
+        <p>ウクラマトとアルフィノが援護に現れ、爪と魔法が響き合った。Nebelfeeは霧を渦に変え、使徒の視界を奪った。双剣が黄金を切り裂き、霧がその傷を覆った。Schattenfeeは影を渡り、手裏剣で敵を翻弄した。ウクラマトとアルフィノの連携が使徒を圧倒した。</p>
+        <p>使徒が黄金の波を放ち、摩天楼が震えた。Nebelfeeは霧を盾に変え、Schattenfeeを守った。双剣が波を砕き、霧がその勢いを抑えた。Schattenfeeは影から飛び出し、手裏剣を連続で投げた。ウクラマトの爪が決着をつけ、静寂が戻った。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは影から現れ、姉に微笑んだ。ウクラマトが「エターナルクイーンが最後の敵」と呟き、グラハが頷いた。「最終戦が近い」。姉弟は摩天楼の静寂に立ち、勝利の喜びを感じた。</p>
+        <p>ソリューション・ナインの夜が訪れ、星なき空が静かに輝いた。Nebelfeeは霧で空気を清め、Schattenfeeは影で休息した。ウクラマトとアルフィノが次なる策を練り、姉弟は最終戦に備えた。霧と影が交わり、彼らの絆が深まった。</p>
+
+        <h2>第十章: 黄金の夜明け</h2>
+        <p>金光の峰に再び戻った時、エターナルクイーンが最後の咆哮を上げた。黄金が輝き、山が揺れた。Nebelfeeは霧を嵐に変え、双剣で立ち向かった。Schattenfeeは影に潜み、手裏剣で決意を示した。グラハが魔法を掲げ、「アルカディアとソリューション・ナインの力を超え、エターナルクイーンを倒す時だ」と叫んだ。</p>
+        <p>ウクラマトとリーンが援護に駆けつけ、爪と剣が響き合った。Nebelfeeは霧でエターナルクイーンの動きを封じ、双剣が心臓を貫いた。Schattenfeeは影から飛び出し、手裏剣で核心を突いた。グラハの魔法が希望を灯し、エターナルクイーンが膝をついた。</p>
+        <p>エターナルクイーンが最後の黄金の波を放ち、金光の峰が震えた。Nebelfeeは霧を盾に変え、Schattenfeeを守った。双剣が波を切り裂き、霧が全てを包んだ。Schattenfeeは影を縫い、手裏剣で決着をつけた。ウクラマトとリーンの力がエターナルクイーンを消し去り、夜明けが訪れた。</p>
+        <p>戦いの後、Nebelfeeは息を整え、双剣を手に持つ重さを感じた。Schattenfeeは姉に寄り添い、影で微笑んだ。ウクラマトが「トライヨラが救われた」と吼え、グラハが頷いた。「君たちが未来を切り開いた」。姉弟は互いの手を握り、黄金の夜明けを感じた。</p>
+        <p>朝日が金光の峰を照らし、Nebelfeeは霧で空を清め、Schattenfeeは影で休息した。グラハは魔法を手に未来を見据え、「新たな時代が始まる」と語った。霧と影が朝日に溶け、トライヨラに平和が戻った。</p>
 
         <h2>後日譚: 黄金の旅路</h2>
-        <p>ザラを倒した後、NebelfeeとSchattenfeeはトライヨラで休息の日々を過ごした。姉は20歳、弟は17歳で、暁の拠点に戻る前に金光の峰を見上げていた。ミンフィリアが二人を抱きしめ、「君たちのおかげで遺産が守られた」と涙を浮かべた。Nebelfeeは双剣を手に、母の意志を感じた。Schattenfeeは手裏剣を握り、父の遺志を胸に刻んだ。</p>
-        <p>トライヨラの街は静けさを取り戻し、霧が木々を包んだ。Nebelfeeは霧を操り、街の空気を清めた。Schattenfeeは影に隠れ、静かに休息した。クルレが駆け寄り、「すごかったよ！お疲れ様」と笑顔を見せた。アルフィノは魔法を手に、「これからが新たな始まりだ」と呟いた。姉弟は仲間たちの温かさに心を解いた。</p>
-        <p>ある夜、ミンフィリアは姉弟に新たな旅を提案した。「トライヨラは救われた。でも、エオルゼアにはまだ未来がある」と。Nebelfeeは双剣を背に負い、「母の意志で進む」と誓った。Schattenfeeは手裏剣を腰に帯び、「父の遺志で戦う」と決めた。姉弟は互いの手を握り、次の冒険への覚悟を固めた。</p>
-        <p>トライヨラで訓練が再開された。Nebelfeeは霧を操る術を磨き、Schattenfeeは影の技を極めた。暁の仲間たちが彼らを支え、エオルゼアの未来を守る準備を整えた。姉弟は互いを励まし、絆を深めた。霧と影が共存し、彼らの力が育った。</p>
-        <p>ある朝、姉弟はトライヨラの奥で休息した。Nebelfeeは霧を見上げ、母ミスティアの笑顔を思い出した。Schattenfeeは影に触れ、父カゲロウの教えを感じた。霧と影が彼らを導き、エオルゼアの未来を照らした。姉弟の物語は続き、新たな試練が待っていた。</p>
-        <p>黄金の旅路がトライヨラに希望をもたらした。霧と影が彼らを守り、新たな未来を開いた。運命の旅路はまだ続いていた。</p>
+        <p>エターナルクイーンを倒した後、NebelfeeとSchattenfeeはトライヨラで休息の日々を過ごした。20歳の姉は双剣を手に母の意志を感じ、17歳の弟は手裏剣を握り父の遺志を胸に刻んだ。グラハが現れ、「トライヨラの未来はまだ始まったばかりだ」と語った。</p>
+        <p>ウクラマトとリーンが二人を迎え、タタルが笑顔で駆け寄った。「本当にすごかったよ！」と。Nebelfeeは霧を操り、街を清めた。Schattenfeeは影に潜み、静かに休息した。グラハは新たな冒険を提案し、「アルカディアとソリューション・ナインの遺産を活かそう」と笑った。</p>
+        <p>姉弟はトライヨラの奥で休息し、Nebelfeeは霧を見上げ母を思い、Schattenfeeは影に触れ父を感じた。ウクラマトが「共に未来を守る」と誓い、グラハが頷いた。「希望はここにある」。霧と影が彼らを導き、新たな旅が始まった。</p>
+        <p>トライヨラの街が静けさを取り戻し、新たな活気に満ちた。NebelfeeとSchattenfeeは互いを励まし、絆を深めた。ウクラマトとリーンが仲間たちと計画を立て、次の挑戦に備えた。トライヨラの未来が彼らを待っていた。</p>
+        <p>朝日が街を照らし、Nebelfeeは双剣を手に新たな誓いを立て、Schattenfeeは手裏剣を握り決意を新たにした。霧と影が交わり、彼らの物語は続いた。黄金の旅路が新たな希望を灯し、トライヨラの平和が守られた。</p>
     </div>
     <div class="story-nav">
         <a href="story-endwalker.html">前章: 暁月の終焉</a>
