--- a/story.html
+++ b/story.html
@@ -31,38 +31,38 @@
     <p class="disclaimer">※これは、既存をリスペクトしたオリジナルのストーリーです。</p>
     <section class="story starfall origin-effect">
         <h2><a href="story-origin.html">第零章: NebelfeeとSchattenfeeの出生</a></h2>
-        <p>霧と影に生まれし姉弟の運命が始まる。</p>
-        <p>あらすじ: グリダニアの深奥、霧隠れの谷で生まれたNebelfeeとSchattenfeeは、ヴァイパーと忍者の血を受け継ぐ。両親を失い、霧と影の中で育った二人の旅がここから始まる。</p>
+        <p>霧と影に宿る運命の胎動。</p>
+        <p>あらすじ: 霧と影に生まれし姉弟、NebelfeeとSchattenfeeは、グリダニアの深奥で運命に導かれ、エオルゼアの危機に立ち向かうための力を育む。</p>
     </section>
     <section class="story starfall arr-effect">
         <h2><a href="story-a-realm-reborn.html">新生エオルゼア</a></h2>
-        <p>霧と影、二つの魂が出会う。</p>
-        <p>あらすじ: エオルゼアの危機に立ち向かうため、NebelfeeとSchattenfeeはグリダニアで再会。アルテマウェポンと霧を喰らう竜に挑み、姉弟の絆が試される。</p>
+        <p>新たなる大地に響き合う魂。</p>
+        <p>あらすじ: 霧と影、二つの魂がエオルゼアの大地を駆け抜け、蛮神の咆哮とクリスタルタワーの封印に挑む。仲間と共に帝国の野望を砕き、アルテマウェポンの脅威に立ち向かう旅が、ここに始まる。</p>
     </section>
     <section class="story starfall hw-effect">
         <h2><a href="story-heavensward.html">蒼天のイシュガルド</a></h2>
-        <p>霧の中のヴァイパーが刃を研ぐ。</p>
-        <p>あらすじ: イシュガルドの竜詩戦争に巻き込まれたNebelfeeは霧を操り、ニーズヘッグに挑む。Schattenfeeは影から姉を支え、和平への道を模索する。</p>
+        <p>蒼空に舞う霧と影の刃。</p>
+        <p>あらすじ: 竜と人の抗争の中、NebelfeeとSchattenfeeはイシュガルドでニーズヘッグや教皇の野望に挑み、フォルタン家、天騎士団、暁の仲間と共に蒼天の真実を求める。アレキサンダーの鼓動が響き、聖騎士の誓いが試される旅が始まる。</p>
     </section>
     <section class="story starfall sb-effect">
         <h2><a href="story-stormblood.html">紅蓮の解放者</a></h2>
-        <p>忍者の故郷で、Schattenfeeが影の技を極める。</p>
-        <p>あらすじ: ドマとアラミゴの解放を目指し、Schattenfeeは忍者として故郷で暗躍。Nebelfeeはヴァイパーとして前線に立ち、神龍との戦いで絆が試される。</p>
+        <p>紅蓮の炎に燃える霧と影の絆。</p>
+        <p>あらすじ: NebelfeeとSchattenfeeはドマとアラミゴを巡り、帝国の圧政と蛮神の脅威に挑む。ヒエンやユウギリ、暁の仲間と共にゼノスと神龍を倒し、オメガの試練を乗り越え、紅蓮の自由を勝ち取る旅が始まる。</p>
     </section>
     <section class="story starfall shb-effect">
         <h2><a href="story-shadowbringers.html">漆黒のヴィランズ</a></h2>
-        <p>影の世界で忍者が暗躍する。</p>
-        <p>あらすじ: 第一世界で光と闇が崩れる中、Schattenfeeは影から動き、Nebelfeeは霧で戦う。ハーデスに挑み、二人は別々の道で世界を救う。</p>
+        <p>漆黒の夜を貫く霧と影の光。</p>
+        <p>あらすじ: 第一世界でNebelfeeとSchattenfeeは水晶公と共にクリスタリウムを拠点に光の罪喰いとハーデスに挑み、リーンや暁の仲間と夜を取り戻す旅を続ける。</p>
     </section>
     <section class="story starfall ew-effect">
         <h2><a href="story-endwalker.html">暁月の終焉</a></h2>
-        <p>再会を果たした二人が最終戦に挑む。</p>
-        <p>あらすじ: 宇宙の果てで再会したNebelfeeとSchattenfeeは、メーティオンと終末に立ち向かう。霧と影が交わり、世界の未来が決まる。</p>
+        <p>星海に響く霧と影の終幕。</p>
+        <p>あらすじ: NebelfeeとSchattenfeeはラヴィリンソスと星泪の海を巡り、メーティオンと終末に挑み、パンデモニウムの謎を解きながら暁月の希望を求める。</p>
     </section>
     <section class="story starfall dt-effect">
         <h2><a href="story-dawntrail.html">黄金のレガシー</a></h2>
-        <p>ヴァイパーとして新天地を切り開く。</p>
-        <p>あらすじ: トラルでNebelfeeはヴァイパーとして遺産を守り、Schattenfeeは忍者として影を探る。黄金の守護者と侵略者に挑み、新たな未来を切り開く。</p>
+        <p>黄金の大地に刻む霧と影の誓い。</p>
+        <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと黄金を巡り、ウクラマトと共にアルカディアの試練とソリューション・ナインの謎を解き、ゾラージャとエターナルクイーンに挑み、新大陸の未来を求める。</p>
     </section>
     <footer>
         <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
