シナリオ編集
シナリオ編集

--- a/story-shadowbringers.html
+++ b/story-shadowbringers.html
@@ -28,7 +28,7 @@
         <a href="raid.html">レイド</a>
     </nav>
     <h1 class="theme-shb">漆黒のヴィランズ</h1>
-    <p>あらすじ: 第一世界でNebelfeeとSchattenfeeは水晶公と共にクリスタリウムを拠点に光の罪喰いとハーデスに挑み、リーンや暁の仲間と夜を取り戻す旅を続ける。</p>
+    <p>あらすじ: 第一世界でNebelfeeとSchattenfeeは水晶公と共にクリスタリウムを拠点に光の罪喰い・エデンとハーデスに挑み、リーンや暁の仲間と夜を取り戻す旅を続ける。</p>
     <div class="story-content">
         <h2>前日譚: 第一世界への召喚とミンフィリアの別れ</h2>
         <p>ドマとアラミゴを解放し、紅蓮の自由を勝ち取った後、NebelfeeとSchattenfeeはグリダニアで休息していた。姉は16歳、弟は13歳となり、霧と影の力は成熟していた。暁の拠点でミンフィリアが最後の言葉を告げた。「第一世界が光に飲み込まれている。私が導き、君たちを送り出す」と。彼女の声には決意が宿り、異世界の光が近づいていた。</p>
