--- a/story.html
+++ b/story.html
@@ -52,7 +52,7 @@
     <section class="story starfall shb-effect">
         <h2><a href="story-shadowbringers.html">漆黒のヴィランズ</a></h2>
         <p>漆黒の夜を貫く霧と影の光。</p>
-        <p>あらすじ: 第一世界でNebelfeeとSchattenfeeは水晶公と共にクリスタリウムを拠点に光の罪喰いとハーデスに挑み、リーンや暁の仲間と夜を取り戻す旅を続ける。</p>
+        <p>あらすじ: 第一世界でNebelfeeとSchattenfeeは水晶公と共にクリスタリウムを拠点に光の罪喰い・エデンとハーデスに挑み、リーンや暁の仲間と夜を取り戻す旅を続ける。</p>
     </section>
     <section class="story starfall ew-effect">
         <h2><a href="story-endwalker.html">暁月の終焉</a></h2>
