--- a/story-a-realm-reborn.html
+++ b/story-a-realm-reborn.html
@@ -26,6 +26,11 @@
         <a href="story.html">ストーリー</a>
         <a href="gallery.html">ギャラリー</a>
         <a href="raid.html">レイド</a>
+        <a href="gear.html">装備</a>
+        <a href="diary.html">プレイ日記</a>
+        <a href="recruit.html">仲間募集</a>
+        <a href="links.html">リンク集</a>
+        <a href="spots.html">スクショスポット</a>
     </nav>
     <h1 class="theme-arr">新生エオルゼア</h1>
     <p>あらすじ: 霧と影、二つの魂がエオルゼアの大地を駆け抜け、蛮神の咆哮とクリスタルタワーの封印に挑む。仲間と共に帝国の野望を砕き、アルテマウェポンの脅威に立ち向かう旅が、ここに始まる。</p>
