--- a/story-endwalker.html
+++ b/story-endwalker.html
@@ -26,6 +26,11 @@
         <a href="story.html">ストーリー</a>
         <a href="gallery.html">ギャラリー</a>
         <a href="raid.html">レイド</a>
+        <a href="gear.html">装備</a>
+        <a href="diary.html">プレイ日記</a>
+        <a href="recruit.html">仲間募集</a>
+        <a href="links.html">リンク集</a>
+        <a href="spots.html">スクショスポット</a>
     </nav>
     <h1 class="theme-ew">暁月の終焉</h1>
     <p>あらすじ: NebelfeeとSchattenfeeはラヴィリンソスと星泪の海を巡り、メーティオンと終末に挑み、パンデモニウムの謎を解きながら暁月の希望を求める。</p>
