--- a/story-origin.html
+++ b/story-origin.html
@@ -26,6 +26,11 @@
         <a href="story.html">ストーリー</a>
         <a href="gallery.html">ギャラリー</a>
         <a href="raid.html">レイド</a>
+        <a href="gear.html">装備</a>
+        <a href="diary.html">プレイ日記</a>
+        <a href="recruit.html">仲間募集</a>
+        <a href="links.html">リンク集</a>
+        <a href="spots.html">スクショスポット</a>
     </nav>
     <h1>第零章: NebelfeeとSchattenfeeの出生</h1>
     <p>あらすじ: 霧と影に生まれし姉弟、NebelfeeとSchattenfeeは、グリダニアの深奥で運命に導かれ、エオルゼアの危機に立ち向かうための力を育む。</p>
