--- a/story-dawntrail.html
+++ b/story-dawntrail.html
@@ -26,6 +26,11 @@
         <a href="story.html">ストーリー</a>
         <a href="gallery.html">ギャラリー</a>
         <a href="raid.html">レイド</a>
+        <a href="gear.html">装備</a>
+        <a href="diary.html">プレイ日記</a>
+        <a href="recruit.html">仲間募集</a>
+        <a href="links.html">リンク集</a>
+        <a href="spots.html">スクショスポット</a>
     </nav>
     <h1 class="theme-dt">黄金のレガシー</h1>
     <p>あらすじ: NebelfeeとSchattenfeeはトライヨラと黄金を巡り、ウクラマトと共にアルカディアの試練とソリューション・ナインの謎を解き、ゾラージャとエターナルクイーンに挑み、新大陸の未来を求める。</p>
