--- a/story-heavensward.html
+++ b/story-heavensward.html
@@ -18,15 +18,19 @@
         <button class="nav-btn" onclick="prevTrack()"><</button>
         <button class="nav-btn" onclick="nextTrack()">></button>
         <p>再生中: <span id="current-track"></span></p>
-    </div>
-    <nav>
-        <a href="index.html">ホーム</a>
-        <a href="profile-nebelfee.html">Nebelfee</a>
-        <a href="profile-schattenfee.html">Schattenfee</a>
-        <a href="story.html">ストーリー</a>
-        <a href="gallery.html">ギャラリー</a>
-        <a href="raid.html">レイド</a>
-    </nav>
+        <nav>
+            <a href="index.html">ホーム</a>
+            <a href="profile-nebelfee.html">Nebelfee</a>
+            <a href="profile-schattenfee.html">Schattenfee</a>
+            <a href="story.html">ストーリー</a>
+            <a href="gallery.html">ギャラリー</a>
+            <a href="raid.html">レイド</a>
+            <a href="gear.html">装備</a>
+            <a href="diary.html">プレイ日記</a>
+            <a href="recruit.html">仲間募集</a>
+            <a href="links.html">リンク集</a>
+            <a href="spots.html">スクショスポット</a>
+        </nav>
     <h1 class="theme-hw">蒼天のイシュガルド</h1>
     <p>あらすじ: 竜と人の抗争の中、NebelfeeとSchattenfeeはイシュガルドでニーズヘッグや教皇の野望に挑み、フォルタン家、天騎士団、暁の仲間と共に蒼天の真実を求める。アレキサンダーの鼓動が響き、聖騎士の誓いが試される旅が始まる。</p>
     <div class="story-content">
