--- a/story-stormblood.html
+++ b/story-stormblood.html
@@ -26,6 +26,11 @@
         <a href="story.html">ストーリー</a>
         <a href="gallery.html">ギャラリー</a>
         <a href="raid.html">レイド</a>
+        <a href="gear.html">装備</a>
+        <a href="diary.html">プレイ日記</a>
+        <a href="recruit.html">仲間募集</a>
+        <a href="links.html">リンク集</a>
+        <a href="spots.html">スクショスポット</a>
     </nav>
     <h1 class="theme-sb">紅蓮の解放者</h1>
     <p>あらすじ: NebelfeeとSchattenfeeはドマとアラミゴを巡り、帝国の圧政と蛮神の脅威に挑む。ヒエンやユウギリ、暁の仲間と共にゼノスと神龍を倒し、オメガの試練を乗り越え、紅蓮の自由を勝ち取る旅が始まる。</p>
