--- a/diary.html
+++ b/diary.html
@@ -5,6 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>プレイ日記 - FF14 冒険者の記録</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* 新しい日記を作成ボタンのデザイン */
+        #admin-controls {
+            margin-bottom: 20px;
+        }
+        .create-btn {
+            display: inline-block;
+            padding: 12px 24px;
+            font-size: 18px;
+            font-weight: bold;
+            color: #ffffff;
+            background-color: #ff6f61;
+            text-decoration: none;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            transition: all 0.3s ease;
+        }
+        .create-btn:hover {
+            background-color: #ff8a75;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.4);
+        }
+        .create-btn:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        }
+        /* 音楽プレイヤーのスタイル */
+        .music-player {
+            margin: 20px auto;
+            text-align: center;
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+            max-width: 600px;
+        }
+        .music-player button {
+            padding: 5px 10px;
+            margin: 0 5px;
+            background-color: #ff6f61;
+            color: white;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+        .music-player button:hover {
+            background-color: #ff8a75;
+        }
+        .music-player input[type="range"] {
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body class="bg-diary">
     <div class="music-player">
@@ -17,7 +68,7 @@
         <input type="range" id="volume" min="0" max="1" step="0.1" value="1" onchange="adjustVolume()">
         <button class="nav-btn" onclick="prevTrack()"><</button>
         <button class="nav-btn" onclick="nextTrack()">></button>
-        <p>再生中: <span id="current-track"></span></p>
+        <p>再生中: <span id="current-track">未選択</span></p>
     </div>
     <nav>
         <a href="index.html">ホーム</a>
@@ -47,47 +98,115 @@
         </section>
     </div>
     <footer>
-        <p>© SQUARE ENIX CO., LTD. All Rights Reserved.</p>
+        <p>© SQUARE ENIX CO., LTD. All Rights Reserved. 
+            <input type="text" id="admin-command" style="width: 80px; font-size: 10px; opacity: 0.3; border: none; background: transparent; color: inherit; vertical-align: middle;" placeholder="...">
+        </p>
     </footer>
-    <script src="script.js"></script>
     <script>
         let isAdmin = false;
-        let tapCount = 0;
-        const TAP_THRESHOLD = 5;
         let db;
         let currentPage = 1;
         const ITEMS_PER_PAGE = 10;
 
-        document.addEventListener("keydown", (e) => {
-            if (e.ctrlKey && e.shiftKey && e.key === "A") {
-                activateAdminMode();
-            }
-        });
+        // 音楽プレイヤーの設定
+        const tracks = [
+            { src: "assets/Flow.mp3", name: "Flow" },
+            { src: "assets/Close in the Distance.mp3", name: "Close in the Distance" }
+        ];
+        let currentTrackIndex = 0;
+        const audio = document.getElementById("bgm");
+        const currentTrackDisplay = document.getElementById("current-track");
 
-        document.getElementById("diary-title").addEventListener("click", () => {
-            tapCount++;
-            console.log("タップ回数:", tapCount);
-            if (tapCount >= TAP_THRESHOLD) {
-                activateAdminMode();
-                tapCount = 0;
-            }
-            setTimeout(() => { tapCount = 0; }, 2000);
-        });
-
-        function activateAdminMode() {
-            const password = prompt("管理者パスワードを入力してください:");
-            console.log("入力されたパスワード:", password);
-            if (password === "1225@Yuuto") {
-                isAdmin = true;
-                document.getElementById("admin-controls").style.display = "block";
-                localStorage.setItem("isAdmin", "true");
-                loadDiaries();
-                console.log("管理者モード: ON");
-            } else {
-                alert("パスワードが間違っています。");
-                console.log("パスワード不一致:", password, "!= 1225@Yuuto");
-            }
+        function setupBGM() {
+            const source = document.getElementById("bgm-source");
+            source.src = tracks[currentTrackIndex].src;
+            audio.load();
+            currentTrackDisplay.textContent = tracks[currentTrackIndex].name;
+            console.log("BGM設定:", tracks[currentTrackIndex].name);
         }
+
+        function startBGM() {
+            audio.play().catch(err => console.error("再生エラー:", err));
+            console.log("BGM開始:", tracks[currentTrackIndex].name);
+        }
+
+        function toggleBGM() {
+            if (audio.paused) {
+                audio.play().catch(err => console.error("再生エラー:", err));
+            } else {
+                audio.pause();
+            }
+            console.log("BGM切り替え:", audio.paused ? "停止" : "再生");
+        }
+
+        function adjustVolume() {
+            audio.volume = document.getElementById("volume").value;
+            console.log("音量調整:", audio.volume);
+        }
+
+        function prevTrack() {
+            currentTrackIndex = (currentTrackIndex - 1 + tracks.length) % tracks.length;
+            setupBGM();
+            startBGM();
+        }
+
+        function nextTrack() {
+            currentTrackIndex = (currentTrackIndex + 1) % tracks.length;
+            setupBGM();
+            startBGM();
+        }
+
+        // 管理者モード起動関数
+        function activateAdminMode() {
+            isAdmin = true;
+            document.getElementById("admin-controls").style.display = "block";
+            localStorage.setItem("isAdmin", "true");
+            loadDiaries();
+            console.log("管理者モード: ON");
+        }
+
+        // 全ての初期化を1つのDOMContentLoadedに統合
+        document.addEventListener("DOMContentLoaded", () => {
+            console.log("ページ読み込み開始");
+
+            // 音楽プレイヤーの初期化
+            setupBGM();
+
+            // 管理者コマンド入力の監視
+            const adminInput = document.getElementById("admin-command");
+            if (adminInput) {
+                console.log("管理者コマンド入力欄が検出されました");
+                adminInput.addEventListener("input", (e) => {
+                    const command = e.target.value.trim().toLowerCase();
+                    console.log("入力された値:", command);
+                    if (command === "admin") {
+                        activateAdminMode();
+                        e.target.value = "";
+                    }
+                });
+            } else {
+                console.error("管理者コマンド入力欄が見つかりません");
+            }
+
+            // IndexedDB初期化
+            const dbName = "FF14DiaryDB";
+            const request = indexedDB.open(dbName, 1);
+
+            request.onupgradeneeded = (event) => {
+                db = event.target.result;
+                db.createObjectStore("diaries", { keyPath: "id", autoIncrement: true });
+            };
+
+            request.onsuccess = (event) => {
+                db = event.target.result;
+                loadDiaries();
+                console.log("IndexedDB 接続成功");
+            };
+
+            request.onerror = (event) => {
+                console.error("IndexedDBエラー:", event.target.error);
+            };
+        });
 
         function loadDiaries() {
             const transaction = db.transaction(["diaries"], "readonly");
@@ -116,7 +235,6 @@
                 const entry = document.createElement("article");
                 entry.className = "diary-entry";
                 if (!diary.token) {
-                    console.error("トークンが欠落しています。ID:", diary.id);
                     diary.token = generateToken();
                     updateDiaryToken(diary);
                 }
@@ -172,7 +290,6 @@
                 const transaction = db.transaction(["diaries"], "readwrite");
                 const store = transaction.objectStore("diaries");
                 store.delete(Number(id));
-
                 transaction.oncomplete = () => {
                     loadDiaries();
                     console.log(`日記 ID: ${id} を削除しました`);
@@ -181,16 +298,9 @@
         }
 
         function updateDiaryToken(diary) {
-            const request = indexedDB.open("FF14DiaryDB", 1);
-            request.onsuccess = (event) => {
-                const db = event.target.result;
-                const transaction = db.transaction(["diaries"], "readwrite");
-                const store = transaction.objectStore("diaries");
-                store.put(diary);
-                transaction.oncomplete = () => {
-                    console.log("トークンを更新しました。ID:", diary.id, "Token:", diary.token);
-                };
-            };
+            const transaction = db.transaction(["diaries"], "readwrite");
+            const store = transaction.objectStore("diaries");
+            store.put(diary);
         }
 
         function generateShareLink(id, token) {
@@ -203,31 +313,9 @@
             });
         }
 
-        document.addEventListener("DOMContentLoaded", () => {
-            const tracks = [
-                { src: "assets/Flow.mp3", name: "Flow" },
-                { src: "assets/Close in the Distance.mp3", name: "Close in the Distance" }
-            ];
-            setupBGM(tracks);
-
-            const dbName = "FF14DiaryDB";
-            const request = indexedDB.open(dbName, 1);
-
-            request.onupgradeneeded = (event) => {
-                db = event.target.result;
-                db.createObjectStore("diaries", { keyPath: "id", autoIncrement: true });
-            };
-
-            request.onsuccess = (event) => {
-                db = event.target.result;
-                loadDiaries();
-                console.log("IndexedDB 接続成功");
-            };
-
-            request.onerror = (event) => {
-                console.error("IndexedDBエラー:", event.target.error);
-            };
-        });
+        function generateToken() {
+            return Math.random().toString(36).substring(2);
+        }
     </script>
 </body>
 </html>
