--- a/edit-diary.html
+++ b/edit-diary.html
@@ -5,6 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>日記を編集 - FF14 冒険者の記録</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* 編集画面のスタイル調整 */
+        .story-section {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        #diary-form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px; /* 入力項目間の間隔 */
+        }
+        #diary-form label {
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+        #diary-form input[type="date"],
+        #diary-form input[type="text"],
+        #diary-form textarea,
+        #diary-form input[type="file"] {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+        #diary-form textarea {
+            resize: vertical; /* 縦方向のみリサイズ可能 */
+        }
+        #current-image {
+            margin-top: 10px;
+        }
+        #current-image p {
+            margin: 0 0 5px 0;
+        }
+        .diary-image {
+            max-width: 100%; /* コンテナ幅を超えない */
+            height: auto;
+            border-radius: 5px;
+            display: block;
+            margin: 0 auto; /* 中央揃え */
+        }
+        #diary-form button[type="submit"] {
+            padding: 10px;
+            background-color: #ff6f61;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        #diary-form button[type="submit"]:hover {
+            background-color: #ff8a75;
+        }
+        .back-link {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 16px;
+            color: #ff6f61;
+            text-decoration: none;
+            border: 1px solid #ff6f61;
+            border-radius: 5px;
+            transition: all 0.3s;
+        }
+        .back-link:hover {
+            background-color: #ff6f61;
+            color: white;
+        }
+    </style>
 </head>
 <body class="bg-diary">
     <div class="music-player">
@@ -37,13 +103,13 @@
         <section class="story-section">
             <form id="diary-form">
                 <label for="date">日付:</label>
-                <input type="date" id="date" name="date" required><br>
+                <input type="date" id="date" name="date" required>
                 <label for="summary">概要:</label>
-                <input type="text" id="summary" name="summary" placeholder="短い説明" required><br>
+                <input type="text" id="summary" name="summary" placeholder="短い説明" required>
                 <label for="content">詳細:</label>
-                <textarea id="content" name="content" placeholder="日記の内容" rows="5" required></textarea><br>
+                <textarea id="content" name="content" placeholder="日記の内容" rows="5" required></textarea>
                 <label for="image">画像（任意）:</label>
-                <input type="file" id="image" name="image" accept="image/*"><br>
+                <input type="file" id="image" name="image" accept="image/*">
                 <div id="current-image"></div>
                 <button type="submit">保存</button>
                 <a href="diary.html" class="back-link">キャンセル</a>
@@ -98,14 +164,16 @@
 
                 request.onsuccess = () => {
                     const diary = request.result;
-                    document.getElementById("date").value = diary.date.replace(/\//g, "-");
-                    document.getElementById("summary").value = diary.summary;
-                    document.getElementById("content").value = diary.content;
-                    if (diary.image) {
-                        document.getElementById("current-image").innerHTML = `
-                            <p>現在の画像:</p>
-                            <img src="${diary.image}" alt="現在の画像" class="diary-image">
-                        `;
+                    if (diary) {
+                        document.getElementById("date").value = diary.date.replace(/\//g, "-");
+                        document.getElementById("summary").value = diary.summary;
+                        document.getElementById("content").value = diary.content;
+                        if (diary.image) {
+                            document.getElementById("current-image").innerHTML = `
+                                <p>現在の画像:</p>
+                                <img src="${diary.image}" alt="現在の画像" class="diary-image">
+                            `;
+                        }
                     }
                 };
             }
@@ -142,6 +210,14 @@
                 };
             }
         });
+
+        // 仮の音楽関数（script.jsがない場合用）
+        function startBGM() { console.log("BGM開始"); }
+        function toggleBGM() { console.log("BGM切り替え"); }
+        function adjustVolume() { console.log("音量調整"); }
+        function prevTrack() { console.log("前のトラック"); }
+        function nextTrack() { console.log("次のトラック"); }
+        function setupBGM(tracks) { console.log("BGM設定:", tracks); }
     </script>
 </body>
 </html>
