--- a/gear.html
+++ b/gear.html
@@ -70,7 +70,7 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const tracks = [
-                { src: "assets/The Maker's Ruin.mp3", name: "The Maker's Ruin" },
+                { src: "assets/エスケープ ～次元の狭間オメガアルファ編～.mp3", name: "エスケープ" },
                 { src: "assets/究極幻想.mp3", name: "究極幻想" }
             ];
             const bgm = document.getElementById("bgm");
